# online-learning-site

./: 404.html  Cargo.toml  README.md  create.html  discuss.html  index.html  learn.html  package-lock.json  package.json  userAuth.html
css/: login.css  style.css
icons/: site.webmanifest
js/: 404.js  articleModuleBuilder.js  authy.js  controllerSupport.js  courseModuleBuilder.js  databased.js  generator.js  golden retriever.js  md.js  moduleBuilder.js  redirects.js  storage.js  validation.js
src/: main.rs
templates/: course-holder-template.html  footer-template.html  header-template.html
